--- a/applist/index.html
+++ b/applist/index.html
@@ -11,5 +11,6 @@
     <app></app>
     <!-- built files will be auto injected -->
     <script src="http://elimages.52miyu.com/js/vue.1.0.18.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/vue.resource/1.0.3/vue-resource.min.js"></script>
   </body>
 </html>
