--- a/vue2x/dgwifi/error.html
+++ b/vue2x/dgwifi/error.html
@@ -7,6 +7,7 @@
 <meta name="format-detection" content="telephone=no, email=no"> 
 </head>  
 <body>  
-  <div id="error"></div>  
+  <div id="error"></div>
+  <script src="http://yuntifile.oss-cn-shenzhen.aliyuncs.com/js/vue.205.min.js"></script>
 </body>  
 </html>
