--- a/vue2x/dgwifi/index.html
+++ b/vue2x/dgwifi/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="http://yuntifile.oss-cn-shenzhen.aliyuncs.com/js/vue.205.min.js"></script>
     <!-- built files will be auto injected -->
   </body>
 </html>
