--- a/home/index.html
+++ b/home/index.html
@@ -23,8 +23,8 @@
       <div class="app-info">
         <div class="banner-text"><img src="images/banner_text3.png"></div>
         <div class="download">
-          <a href="javascript:;">iphone下载</a>
-          <a href="javascript:;">Android下载</a>
+          <a href="javascript:;">iPhone 下载</a>
+          <a href="javascript:;">Android 下载</a>
         </div>
         <div class="g-phone">
           <img src="images/phone.png">
@@ -36,14 +36,14 @@
       <P class="g-tac wifi-desc">你所想到的，我们都为你做到</P>
       <ul class="desc-list g-clearfix">
         <li class="list-img g-fl"><img src="images/desc01.png"></li>
-        <li class="list-img g-fl"><img src="images/desc01.png"></li>
         <li class="list-img g-fl"><img src="images/desc02.png"></li>
-      </ul> 
-    </div>   
+        <li class="list-img g-fl"><img src="images/desc03.png"></li>
+      </ul>
+    </div>
   </div>
   <footer>
     <div class="foot g-clearfix">
-      <p class="g-tac g-fl">copyright2016-2016东莞无限<br>粤ICP16105742</p>
+      <p class="g-tac g-fl">Copyright ©2016 东莞无线<br><a href="http://www.miibeian.gov.cn" target="_blank">粤ICP16105742</a></p>
       <span class="foot-wechat g-fr g-tac"><img src="images/wechat.png"><br/><i>关注东莞无线，获取最新资讯</i></span>
     </div>
   </footer>
