--- a/home/download.html
+++ b/home/download.html
@@ -120,7 +120,7 @@
         if (isWeiXin()) {
           document.getElementById('iosGuide').style.display = "block";
         } else {
-          document.getElementById('iosGuide').style.display = "block";
+          theUrl = 'http://itunes.apple.com/app/id942885362?mt=8'
         }
       }
       //location.href = theUrl;
