--- a/app/about.html
+++ b/app/about.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-  <title>软件许可及服务协议</title>
+  <title>关于我们</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <style>
   .container {
