--- a/app/agreement.html
+++ b/app/agreement.html
@@ -180,14 +180,14 @@
     <div class="container">
         <h2 class="title bold">软件许可及服务协议</h2>
         <p class="lead bold">【导语】</p>
-        <p class="normal-list">尊敬的用户，您好！欢迎您使用东莞市云行智慧信息科技有限公司东莞无线软件及服务！</p>
-        <p class="bold base-linehght">为使用东莞市云行智慧信息科技有限公司东莞无线软件（以下统称“本软件”）及服务，您应当阅读并遵守本协议，否则您无权下载、安装或使用本软件及相关服务。您的下载、安装、使用、登录等行为即视为您已阅读并同意本协议的约束。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款，以及开通或使用某项服务的单独协议。</p>
+        <p class="normal-list">尊敬的用户，您好！欢迎您使用东莞市云行智慧信息科技有限公司东莞无限软件及服务！</p>
+        <p class="bold base-linehght">为使用东莞市云行智慧信息科技有限公司东莞无限软件（以下统称“本软件”）及服务，您应当阅读并遵守本协议，否则您无权下载、安装或使用本软件及相关服务。您的下载、安装、使用、登录等行为即视为您已阅读并同意本协议的约束。请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款，以及开通或使用某项服务的单独协议。</p>
         <p class="bold base-linehght">如果您未满18周岁，请在法定监护人的陪同下阅读本协议，并特别注意未成年人使用条款。</p>
         <p class="bold title-linehght">一、用户行为规范</p>
         <ol class="top15">
-            <li>1.1 凡是下载、浏览和发布内容的用户均为东莞无线用户(以下统称“用户”)。</li>
+            <li>1.1 凡是下载、浏览和发布内容的用户均为东莞无限用户(以下统称“用户”)。</li>
             <li>1.2用户享有言论自由的权利。</li>
-            <li>1.3用户的言行不得违反《计算机信息网络国际联网安全保护管理办法》、《互联网信息服务管理办法》、《互联网电子公告服务管理规定》、《维护互联网安全的决定》、《互联网新闻信息服务管理规定》等相关法律规定，不得在东莞无线上发布、复制、传播或以其它方式传送含有下列内容之一的信息：
+            <li>1.3用户的言行不得违反《计算机信息网络国际联网安全保护管理办法》、《互联网信息服务管理办法》、《互联网电子公告服务管理规定》、《维护互联网安全的决定》、《互联网新闻信息服务管理规定》等相关法律规定，不得在东莞无限上发布、复制、传播或以其它方式传送含有下列内容之一的信息：
                 <ol class="indent">
                     <li>(1) 反对宪法所确定的基本原则的；</li>
                     <li>(2) 危害国家安全，泄露国家秘密，颠覆国家政权，破坏国家统一的；</li>
@@ -203,31 +203,31 @@
                     <li>(10) 含有中国法律、法规、规章、条例以及任何具有法律效力之规范所限制或禁止的其它内容的。</li>
                 </ol>
             </li>
-            <li>1.4 用户不得在东莞无线内发布任何形式的广告。</li>
+            <li>1.4 用户不得在东莞无限内发布任何形式的广告。</li>
             <li>1.5 禁止任何使用非法软件进行刷内容、违规发布内容的行为。</li>
-            <li>1.6 为了能够给广大用户提供一个优质的交流平台，同时使得东莞无线能够良性、健康的发展，将对涉及反动、色情和发布不良内容的用户，进行严厉处理。一经发现此类行为，将给予永久封禁并清空所有发言的处罚。</li>
-            <li>1.7 任何用户发现东莞无线上有内容涉嫌侮辱或者诽谤他人、侵害他人合法权益的或违反本协议的，有权进行直接举报。</li>
+            <li>1.6 为了能够给广大用户提供一个优质的交流平台，同时使得东莞无限能够良性、健康的发展，将对涉及反动、色情和发布不良内容的用户，进行严厉处理。一经发现此类行为，将给予永久封禁并清空所有发言的处罚。</li>
+            <li>1.7 任何用户发现东莞无限上有内容涉嫌侮辱或者诽谤他人、侵害他人合法权益的或违反本协议的，有权进行直接举报。</li>
         </ol>
         <p class="bold title-linehght">二、用户隐私保护</p>
         <ol class="top15">
             <li>2.1 用户的个人信息受到保护，不接受任何个人或单位的查询。国家机关依法查询除外，用户的个人设置公开除外。</li>
-            <li>2.2 东莞无线不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务存储在本网站的非公开内容，但下列情况除外：
+            <li>2.2 东莞无限不对外公开或向第三方提供单个用户的注册资料及用户在使用网络服务存储在本网站的非公开内容，但下列情况除外：
                 <ol class="indent">
                     <li>(1) 事先获得用户的明确授权；</li>
                     <li>(2) 根据有关的法律法规要求；</li>
                     <li>(3) 按照相关政府主管部门的要求；</li>
-                    <li>(4) 该第三方同意承担与东莞无线同等的保护用户隐私的责任；</li>
-                    <li>(5) 在不透露单个用户隐私资料的前提下，东莞无线有权对整个用户数据库进行分析并对用户数据库进行商业上的利用；</li>
-                    <li>(6) 本软件包含问题反馈功能，在您提交反馈问题和联系方式的同时我们还会收集您的IMEI号、手机型号等相关信息。您在反馈意见中所填写的联系方式，只会用于我们的客服与您沟通与反馈，除征得用户明确同意和法律明确规定外，东莞无线不会向任何第三方提供用户上传信息。您的信息不会被用于出售，出借或交换。</li>
+                    <li>(4) 该第三方同意承担与东莞无限同等的保护用户隐私的责任；</li>
+                    <li>(5) 在不透露单个用户隐私资料的前提下，东莞无限有权对整个用户数据库进行分析并对用户数据库进行商业上的利用；</li>
+                    <li>(6) 本软件包含问题反馈功能，在您提交反馈问题和联系方式的同时我们还会收集您的IMEI号、手机型号等相关信息。您在反馈意见中所填写的联系方式，只会用于我们的客服与您沟通与反馈，除征得用户明确同意和法律明确规定外，东莞无限不会向任何第三方提供用户上传信息。您的信息不会被用于出售，出借或交换。</li>
                 </ol>
             </li>
         </ol>
         <p class="bold title-linehght">三、法律责任及免责</p>
         <ol class="top15">
-            <li>3.1 东莞无线发布的内容仅代表作者观点，与本团队无关。对于用户言论的真实性引发的全部责任，由用户自行承担，本团队不承担任何责任。</li>
-            <li>3.2 用户之间因使用东莞无线而产生或可能产生的任何纠纷和/或损失，由用户自行解决并承担相应的责任，与本团队无关。</li>
-            <li>3.3 用户在东莞无线上发布的内容，本团队有权转载或引用。</li>
-            <li>3.4 用户在任何时间段在东莞无线上发表的任何内容的著作财产权，用户许可本团队在全世界范围内免费地、永久性地、不可撤销地、可分许可地和非独家地使用的权利，包括但不限于：复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、翻译权、汇编权以及《著作权法》规定的由著作权人享有的其他著作财产权利。并且，用户许可本团队有权利就任何主体侵权而单独提起诉讼，并获得全部赔偿。</li>
+            <li>3.1 东莞无限发布的内容仅代表作者观点，与本团队无关。对于用户言论的真实性引发的全部责任，由用户自行承担，本团队不承担任何责任。</li>
+            <li>3.2 用户之间因使用东莞无限而产生或可能产生的任何纠纷和/或损失，由用户自行解决并承担相应的责任，与本团队无关。</li>
+            <li>3.3 用户在东莞无限上发布的内容，本团队有权转载或引用。</li>
+            <li>3.4 用户在任何时间段在东莞无限上发表的任何内容的著作财产权，用户许可本团队在全世界范围内免费地、永久性地、不可撤销地、可分许可地和非独家地使用的权利，包括但不限于：复制权、发行权、出租权、展览权、表演权、放映权、广播权、信息网络传播权、摄制权、改编权、翻译权、汇编权以及《著作权法》规定的由著作权人享有的其他著作财产权利。并且，用户许可本团队有权利就任何主体侵权而单独提起诉讼，并获得全部赔偿。</li>
             <li>3.5 本团队郑重提醒用户，若出现下列情况任意一种或几种，将承担包括被关闭全部或者部分权限、被暂停或被禁止使用的后果，情节严重的，还将承担相应的法律责任。
                 <ol class="indent">
                     <li>(1) 使用不雅或不恰当昵称；</li>
@@ -248,31 +248,31 @@
                     <li>(6) 其他本团队认为不恰当的情况。</li>
                 </ol>
             </li>
-            <li>3.7 用户违反本《协议》或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，用户同意赔偿东莞无线与合作公司、关联公司，并使之免受损害。</li>
+            <li>3.7 用户违反本《协议》或相关的服务条款的规定，导致或产生的任何第三方主张的任何索赔、要求或损失，包括合理的律师费，用户同意赔偿东莞无限与合作公司、关联公司，并使之免受损害。</li>
         </ol>
         <p class="bold title-linehght">四、用户注意事项</p>
         <ol class="top15">
             <li>4.1 为改善、优化相应服务，本服务可能会对您的昵称、头像以及在本软件中的相关操作信息等信息进行使用。</li>
             <li>4.2 您在使用本服务某一特定服务时，可能还需同意单独的协议、规则等，您在使用该项服务前请仔细阅读前述相关协议、规则。</li>
-            <li>4.3 东莞无线有权在本服务中或通过本服务向您展现各种信息，包括但不限于广告信息、新闻信息及宣传信息等，该信息可能以系统消息或弹出窗口等形式出现。</li>
-            <li>4.4 您可以选择不向东莞无线提供您的某些信息，或者根据产品设置取消东莞无线收集某些信息，但因此可能会导致相关服务功能无法实现。</li>
-            <li>4.5 为了增进用户体验、完善服务内容，东莞无线将不断努力开发新的服务，并为您不时提供软件更新（这些更新可能会采取软件替换、修改、功能强化、版本升级等形式）。本软件可能为您默认开启自动升级、更新等功能，您可以在软件设置中自行选择是否需要开启此功能。</li>
-            <li>4.6 为了改善用户体验，并保证服务的安全性和功能的一致性，东莞无线有权不经向您特别通知而对软件进行更新，或者对软件的部分功能效果进行改变或限制。</li>
-            <li>4.7 本软件新版本发布后，旧版本的软件可能无法使用。东莞无线不保证旧版本软件继续可用及相应的客户服务，请您随时核对并下载最新版本。</li>
+            <li>4.3 东莞无限有权在本服务中或通过本服务向您展现各种信息，包括但不限于广告信息、新闻信息及宣传信息等，该信息可能以系统消息或弹出窗口等形式出现。</li>
+            <li>4.4 您可以选择不向东莞无限提供您的某些信息，或者根据产品设置取消东莞无限收集某些信息，但因此可能会导致相关服务功能无法实现。</li>
+            <li>4.5 为了增进用户体验、完善服务内容，东莞无限将不断努力开发新的服务，并为您不时提供软件更新（这些更新可能会采取软件替换、修改、功能强化、版本升级等形式）。本软件可能为您默认开启自动升级、更新等功能，您可以在软件设置中自行选择是否需要开启此功能。</li>
+            <li>4.6 为了改善用户体验，并保证服务的安全性和功能的一致性，东莞无限有权不经向您特别通知而对软件进行更新，或者对软件的部分功能效果进行改变或限制。</li>
+            <li>4.7 本软件新版本发布后，旧版本的软件可能无法使用。东莞无限不保证旧版本软件继续可用及相应的客户服务，请您随时核对并下载最新版本。</li>
         </ol>
         <p class="bold title-linehght">五、知识产权声明</p>
         <ol>
-            <li>5.1 东莞无线是本软件的知识产权权利人。本软件的著作权、商标权、专利权、商业秘密等知识产权，以及与本软件相关的所有信息内容（包括但不限于文字、图片、音频、视频、图表、界面设计、版面框架、有关数据或电子文档等）均受中华人民共和国法律法规和相应的国际条约保护，东莞无线依法享有上述相关知识产权，但相关权利人依照法律规定应享有的权利除外。</li>
-            <li>5.2 未经东莞无线相关权利人书面同意，您不得为任何商业或非商业目的自行或许可任何第三方实施、利用、转让上述知识产权。</li>
+            <li>5.1 东莞无限是本软件的知识产权权利人。本软件的著作权、商标权、专利权、商业秘密等知识产权，以及与本软件相关的所有信息内容（包括但不限于文字、图片、音频、视频、图表、界面设计、版面框架、有关数据或电子文档等）均受中华人民共和国法律法规和相应的国际条约保护，东莞无限依法享有上述相关知识产权，但相关权利人依照法律规定应享有的权利除外。</li>
+            <li>5.2 未经东莞无限相关权利人书面同意，您不得为任何商业或非商业目的自行或许可任何第三方实施、利用、转让上述知识产权。</li>
         </ol>
         <p class="bold title-linehght">六、其他事项</p>
         <ol class="top15">
             <li>6.1 您使用本软件或本服务即视为您已阅读并同意受本协议的约束。</li>
-            <li>6.2 以上各项条款内容的最终解释权及修改权归东莞无线公司所有。</li>
+            <li>6.2 以上各项条款内容的最终解释权及修改权归东莞无限公司所有。</li>
             <li>6.3 本《协议》所定的任何条款的部分或全部无效者，不影响其它条款的效力。</li>
             <li>6.4 本协议的成立、生效、履行、解释及纠纷解决，适用中华人民共和国大陆地区法律（不包括冲突法）。</li>
-            <li>6.5 若您和东莞无线之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，您同意将纠纷或争议提交本协议签订地有管辖权的人民法院管辖。</li>
-            <li>6.6 本《协议》的版权东莞无线所有，东莞无线保留一切解释和修改权利。</li>
+            <li>6.5 若您和东莞无限之间发生任何纠纷或争议，首先应友好协商解决；协商不成的，您同意将纠纷或争议提交本协议签订地有管辖权的人民法院管辖。</li>
+            <li>6.6 本《协议》的版权东莞无限所有，东莞无限保留一切解释和修改权利。</li>
         </ol>
     </div>
 </body>
