--- a/home/index.html
+++ b/home/index.html
@@ -43,8 +43,8 @@
   </div>
   <footer>
     <div class="foot g-clearfix">
-      <p class="g-tac g-fl">Copyright ©2016 东莞无线<br><a href="http://www.miibeian.gov.cn" target="_blank">粤ICP16105742</a></p>
-      <span class="foot-wechat g-fr g-tac"><img src="images/wechat.png"><br/><i>关注东莞无线，获取最新资讯</i></span>
+      <p class="g-tac g-fl">Copyright ©2016 东莞无限<br><a href="http://www.miibeian.gov.cn" target="_blank">粤ICP16105742</a></p>
+      <span class="foot-wechat g-fr g-tac"><img src="images/wechat.png"><br/><i>关注东莞无限，获取最新资讯</i></span>
     </div>
   </footer>
 </body>
