--- a/home/download.html
+++ b/home/download.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta charset="utf-8">
-    <title>下载东莞无线</title>
+    <title>下载东莞无限</title>
     <link rel="stylesheet" type="text/css" href="css/reset.css">
     <style type="text/css">
       .shade {
