--- a/vue2x/webpage/index.html
+++ b/vue2x/webpage/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <meta name="format-detection" content="telephone=no, email=no">
-    <title>东莞无线</title>
+    <title>东莞无限</title>
   </head>
   <body>
     <div id="webview"></div>
