--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
   <meta charset="utf-8">
-  <title>下载东莞无限</title>
+  <title>东莞无限</title>
   <link rel="stylesheet" type="text/css" href="css/reset.css">
   <style type="text/css">
   .shade {
@@ -145,9 +145,9 @@
 <body>
   <div class="section">
     <div class="banner">
-      <img src="images/banner.png">
+      <img src="http://img.yunxingzh.com/97da6491-5aec-4711-b274-a280ee3bd8fb.png">
       <div class="banner-over">
-        <img class="over-img" src="images/text.png">
+        <img class="over-img" src="http://img.yunxingzh.com/5dff85eb-5ef1-406c-a776-005a59abcd45.png">
         <span class="down-ios">iOS下载</span>
         <span class="down-android">Android下载</span>
       </div>
