download/whitelist getdata

--- a/home/download.html
+++ b/home/download.html
@@ -114,13 +114,13 @@
         if (isWeiXin()) {
           document.getElementById('androidGuide').style.display = "block";
         } else {
-          theUrl = 'http://down.360safe.com/360ap/360freewifi_beta.apk';          
+          theUrl = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.yunxingzh.wireless';          
         }
       } else if (Terminal.platform.ios) {
         if (isWeiXin()) {
           document.getElementById('iosGuide').style.display = "block";
         } else {
-          theUrl = 'http://itunes.apple.com/app/id942885362?mt=8'
+          theUrl = 'http://a.app.qq.com/o/simple.jsp?pkgname=com.yunxingzh.wireless'
         }
       }
       //location.href = theUrl;
