--- a/home/index.html
+++ b/home/index.html
@@ -23,8 +23,8 @@
       <div class="app-info">
         <div class="banner-text"><img src="http://img.yunxingzh.com/5349a681-bab5-485a-9d1b-c9b807fa3009.png"></div>
         <div class="download">
-          <a href="javascript:;">iPhone 下载</a>
-          <a href="javascript:;">Android 下载</a>
+          <a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.yunxingzh.wireless">iPhone 下载</a>
+          <a href="http://a.app.qq.com/o/simple.jsp?pkgname=com.yunxingzh.wireless">Android 下载</a>
         </div>
         <div class="g-phone">
           <img src="http://img.yunxingzh.com/a3ed8c1a-1701-4e4c-9996-d9fb5ea910b4.png">
