--- a/home/phoneType.html
+++ b/home/phoneType.html
@@ -34,7 +34,7 @@
       }else{ 
         phoneType = "您的设备太先进了";
       }
-      console.log(phoneType);
+      alert(phoneType);
     }
     getPhoneType();
   </script>  
