--- a/vue2x/portal/login.html
+++ b/vue2x/portal/login.html
@@ -7,10 +7,10 @@
     <title>东莞无限</title>
     <script type="text/javascript">
       var wlanusermac = query().wlanusermac;
-      var macList =['14f65a9f590c'];
+      var macList =['14f65a9f590c','d065ca2f5bc6'];
       var url = '';
       for (var i=0; i<macList.length; i++) {
-        if (wlanusermac !== macList[i]) {
+        if (wlanusermac == macList[i]) {
           url = 'http://192.168.100.4:880/wsmp/customize/dgwifi2/login.html' + document.location.search;
           location.href = url;
         }
