--- a/vue2x/portal/login.html
+++ b/vue2x/portal/login.html
@@ -1,4 +1,4 @@
-i<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -7,7 +7,7 @@ i<!DOCTYPE html>
     <title>东莞无限</title>
     <script type="text/javascript">
       var wlanusermac = query().wlanusermac;
-      var macList =['14f65a9f590c','d065ca2f5bc6','945330575f35','4c:32:75:8a:5a:4d'];
+      var macList =['14f65a9f590c','d065ca2f5bc6','945330575f35','4c:32:75:8a:5a:4d','a858408a9300'];
       var url = '';
       for (var i=0; i<macList.length; i++) {
         if (wlanusermac == macList[i]){
