--- a/vue2x/portal/login.html
+++ b/vue2x/portal/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="width:100%;height: 100%">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
@@ -38,7 +38,7 @@
       }
     </script>
   </head>
-  <body>
+  <body style="width:100%;height: 100%">
     <div id="login"></div>
     <!-- <script src="http://file.yunxingzh.com/js/vue.205.min.js"></script> -->
   </body>
