--- a/vue2x/portal/index.html
+++ b/vue2x/portal/index.html
@@ -7,8 +7,51 @@
     <title>东莞无限</title>
   </head>
   <body>
-    <div id="webview"></div>
-    <!-- <script src="http://file.yunxingzh.com/js/vue.205.min.js"></script> -->
-    <!-- built files will be auto injected -->
+    <div class="mob-login">
+    </div>
+    <div class="pc-login">
+      
+    </div>
+    <p class="tip-info g-tac"></p>
+    <script type="text/html" id="tplIptlogin">
+      <div class="ipt-login">
+        <div class="login-top">
+          <img class="login-top-bg" src="../static/images/img_bg3.png">
+          <p class="g-tac top-text">欢迎使用东莞无限免费WiFi</p>
+        </div>
+        <div class="input-main">
+          <div class="input-info g-clearfix">
+            <label class="input-img g-fl" for="name"><img src="../static/images/loading_icon_phone.png"></label>
+            <input class="g-fr ipt-phone" id="name" type="text" placeholder="请输入手机号">
+          </div>
+          <div class="input-info g-clearfix">
+            <label class="input-img g-fl" for="code" ><img src="../static/images/loading_icon_key.png"></label>
+            <input class="g-fr ipt-code" id="code" type="text" placeholder="请输入验证码">
+            <i class="query-code">输入验证码</i>
+          </div>
+          <button class="btn">开启智慧城市之旅</button>
+        </div>
+      </div>
+    </script>
+    <script type="text/html" id="tplOnelogin">
+      <div class="one-click">
+        <div class="login-top">
+          <img class="login-top-bg" src="../static/images/img_bg4.png">
+          <p class="g-tac top-text oneclick-text">欢迎使用东莞无限免费WiFi</p>
+        </div>
+        <div class="input-main">
+          <button class="btn">一键登录</button>
+        </div>
+      </div>    
+    </script> 
+    <script type="text/html" id="tplBottom">
+      <div class="login-bottom">
+        <img class="company-img" src="../static/images/img_text_phone.png">
+        <img class="app-ads" src="{{ads.img}}">
+      </div>      
+    </script>
+    <script type="text/html" id="tplPc"></script>   
   </body>
+  <!--script type="text/javascript" src="./static/zepto.min.js"></script>
+  <script type="text/javascript" src="./static/template.js"></script-->
 </html>
